--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.mvc.media-types.atom = application/atom+xml
 spring.mvc.media-types.csv = text/csv
+
+spring.resources.chain.strategy.content.enabled = true
+spring.resources.chain.strategy.content.paths=/**
