Update to RC1, use new properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.mvc.media-types.atom = application/atom+xml
-spring.mvc.media-types.csv = text/csv
+spring.mvc.content-negotiation.media-types.atom = application/atom+xml
+spring.mvc.content-negotiation.media-types.csv = text/csv
 
 spring.resources.chain.strategy.content.enabled = true
 spring.resources.chain.strategy.content.paths=/**
