Use favor-parameter as suggested by @bclozel

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.mvc.content-negotiation.media-types.csv = text/csv
 
 spring.resources.chain.strategy.content.enabled = true
 spring.resources.chain.strategy.content.paths=/**
+
+# See discussion here: https://github.com/spring-projects/spring-boot/issues/13424
+spring.mvc.contentnegotiation.favor-parameter=true
