--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.mvc.content-negotiation.media-types.atom = application/atom+xml
 spring.mvc.content-negotiation.media-types.csv = text/csv
 
-spring.resources.chain.strategy.content.enabled = true
-spring.resources.chain.strategy.content.paths=/**
+spring.web.resources.chain.strategy.content.enabled = true
+spring.web.resources.chain.strategy.content.paths=/**
 
 # See discussion here: https://github.com/spring-projects/spring-boot/issues/13424
 spring.mvc.contentnegotiation.favor-parameter=true
